@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: info.test,v 1.2.1.1 1999/01/29 20:52:09 mo Exp $
+# RCS: @(#) $Id: info.test,v 1.2 1999/05/10 02:52:48 dejong Exp $
 
 # If the regexp package is missing, skip tests that require it.
 set REGEXP 1
@@ -550,6 +550,11 @@ test info-12.5 {info locals option} {
 test info-13.1 {info nameofexecutable option} {
     list [catch {info nameofexecutable foo} msg] $msg
 } {1 {wrong # args: should be "info nameofexecutable"}}
+
+test info-13.2 {info nameofexecutable option} {
+    expr {[info nameofexecutable] == {}}
+} {0}
+
 
 if {$REGEXP} {
     test info-14.1 {info patchlevel option} {
