@@ -1,3 +1,11 @@
+2001-11-16  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/InfoCmd.java (InfoNameOfExecutableCmd):
+	Implement info nameofexecutable command by doing a query
+	of the "JAVA" system property.
+	* tests/tcl/info.test: Check that the info nameofexecutable
+	command does not return "".
+
 2001-11-15  Neil Madden  <neil@tallniel.co.uk>
 
 	* src/jacl/tcl/lang/ServerSocketChannel.java:
